# dxon

./: .dockerignore  .gitignore  .gitmodules  404.html  Cargo.toml  Dockerfile  README.md  TEMPLATE_SPEC.md  TODO.md  build.rs  index.html  install.sh  llm.txt  mkdocs.yml  sitemap.xml  upgrade.sh
.github/workflows/: ci.yml  docs.yml  release.yml
ai/: index.html
configuration/: index.html
docs/: ai.md  configuration.md  index.md  installation.md  registry.md  security.md  template-spec.md  templates.md  usage.md
docs/overrides/partials/: footer.html
docs/stylesheets/: extra.css
installation/: index.html
registry/: index.html
scripts/: bump-version.sh  docker-build.sh
search/: search_index.json
security/: index.html
src/: config.rs  error.rs  main.rs  shell_config.rs  user.rs
src/cli/: mod.rs
src/commands/: config.rs  create.rs  delete.rs  enter.rs  info.rs  list.rs  mod.rs  open.rs  registry.rs
src/container/: meta.rs  store.rs
src/runtime/: host.rs  ipc.rs  mod.rs  nspawn.rs  packages.rs
src/runtime/bootstrap/: alpine.rs  arch.rs  debian.rs  mod.rs
src/template/: builtin.rs  mod.rs  registry.rs  remote.rs  spec.rs  yaml_spec.rs
template-spec/: index.html
templates/: index.html
tests/: e2e.rs
usage/: index.html
