[package]
name = "dxon"
version = "0.1.0"
edition = "2021"
description = "Lightweight development container manager"

[[bin]]
name = "dxon"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
dialoguer = "0.11"
console = "0.15"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
ureq = "2"
colored = "2"
dirs = "5"
users = "0.11"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
